# openasr

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docker-publish.yml
benchmarks/: CMakeLists.txt  bench_audio_pipeline.cpp  bench_buffer_engine.cpp  bench_inference_pool.cpp  bench_object_pool.cpp  bench_pipeline_e2e.cpp  bench_result_aggregator.cpp  bench_ring_buffer.cpp  bench_session.cpp
benchmarks/helpers/: synthetic_audio.hpp
config/: server.toml
dev/bench/: data.js
docker/: Dockerfile  Dockerfile.cuda  docker-compose.tls.yml  nginx-tls.conf
docs/: ARCHITECTURE.md
include/: common.hpp  object_pool.hpp
k8s/: configmap.yaml  deployment-gpu.yaml  deployment.yaml  namespace.yaml  networkpolicy-default-deny.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  resource-quota.yaml  service.yaml
k8s/local/: all-in-one.yaml  ingress.yaml  pdb.yaml  secrets.yaml.example
load-testing/: .gitignore  README.md  azure-pipelines.yml
load-testing/config/: endurance-test.yaml  load-test.yaml  security-test.yaml  smoke-test.yaml  stress-test.yaml
load-testing/data/: auth-tokens.csv  speech-configs.csv
load-testing/fragments/: ws-connect-and-config.jmx  ws-receive-results.jmx  ws-send-audio.jmx  ws-teardown.jmx
load-testing/properties/: dev.properties  local.properties  prod.properties  staging.properties
load-testing/scripts/: download-plugin.sh  generate-audio-samples.sh  run-local.sh
load-testing/test-plans/api-benchmark/: api-benchmark.jmx
load-testing/test-plans/endurance/: endurance-test.jmx
load-testing/test-plans/load/: load-test.jmx
load-testing/test-plans/security/: security-test.jmx
load-testing/test-plans/smoke/: smoke-test.jmx
load-testing/test-plans/spike/: spike-test.jmx
load-testing/test-plans/stress/: stress-test.jmx
scripts/: db_migrate.py
src/: main.cpp
src/aggregation/: result_aggregator.hpp
src/audio/: audio_pipeline.hpp  audio_ring_buffer.hpp  audio_utils.hpp  buffer_engine.hpp  opus_decoder.hpp  resampler.hpp  vad.hpp
src/auth/: jwt_validator.hpp
src/config/: config.hpp
src/logging/: json_formatter.hpp
src/metrics/: metrics.hpp
src/protocol/: messages.hpp  validator.hpp
src/server/: auth_rate_limiter.hpp  connection.hpp  constant_time.hpp  ip_extraction.hpp  session_id.hpp  websocket_server.hpp
src/session/: session.hpp  session_manager.hpp
src/transcription/: backend_interface.hpp  inference_pool.hpp  mock_backend.hpp  whisper_backend.hpp
tests/: CMakeLists.txt  test_audio_pipeline.cpp  test_audio_ring_buffer.cpp  test_audio_utils.cpp  test_auth_rate_limiter.cpp  test_buffer_engine.cpp  test_config.cpp  test_connection.cpp  test_constant_time.cpp  test_graceful_shutdown.cpp  test_inference_pool.cpp  test_ip_extraction.cpp  test_json_formatter.cpp  test_jwt_validator.cpp  test_messages.cpp  test_object_pool.cpp  test_rate_limiter_capacity.cpp  test_resampler.cpp  test_result_aggregator.cpp  test_session.cpp  test_session_id.cpp  test_session_manager.cpp  test_vad.cpp  test_validator.cpp  test_websocket_server_unit.cpp
tools/: benchmark.py  e2e_test.py  integration_tests.py  requirements.txt  test_client.py
